--- a/Impliment_on_embed_kit/TFT_touch_xpt2046_calib/TFT_touch_xpt2046_calib.ioc
+++ b/Impliment_on_embed_kit/TFT_touch_xpt2046_calib/TFT_touch_xpt2046_calib.ioc
@@ -33,7 +33,9 @@ Mcu.Pin1=PH1 - OSC_OUT
 Mcu.Pin10=PB12
 Mcu.Pin11=PB14
 Mcu.Pin12=PB15
-Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=VP_SYS_VS_Systick
 Mcu.Pin2=PA1
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
@@ -42,7 +44,7 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB1
 Mcu.Pin9=PB10
-Mcu.PinsNb=14
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401CDUx
@@ -67,6 +69,10 @@ PA1.GPIO_PuPd=GPIO_NOPULL
 PA1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA1.Locked=true
 PA1.Signal=GPIO_Output
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_JTCK-SWCLK
 PA3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA3.GPIO_Label=ST7789_RST
 PA3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
